--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "i18next": "^23.2.6",
+    "jquery": "^3.7.0",
     "next": "13.1.1",
     "next-i18next": "^14.0.0",
     "next-themes": "^0.2.1",
@@ -27,7 +28,8 @@
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
