--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "emailjs-com": "^3.2.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.2.6",
     "jquery": "^3.7.0",
+    "jspdf": "^2.5.1",
     "next": "13.1.1",
     "next-i18next": "^14.0.0",
     "next-themes": "^0.2.1",
