--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "13.1.1",
     "next-i18next": "^14.0.0",
     "next-themes": "^0.2.1",
+    "pdfmake": "^0.2.10",
     "rc-progress": "^3.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +34,7 @@
     "react-modal": "^3.16.1",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
+    "react-to-print": "^2.14.13",
     "slick-carousel": "^1.8.1",
     "typescript": "^5.1.6"
   },
